[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/Sprite-0001.png" type="Texture" id=1]
[ext_resource path="res://LiliacCangur.gd" type="Script" id=2]
[ext_resource path="res://RichTextLabel2.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/background.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/vignette.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/white.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Fly"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.2112
height = 12.3093

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform sampler2D vignette;

void fragment() {
	vec3 vignette_color = texture(vignette, UV).rgb;
	// Screen texture stores gaussian blurred copies on mipmaps.
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, (1.0 - vignette_color.r) * 4.0).rgb;
	COLOR.rgb *= texture(vignette, UV).rgb;
}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/vignette = ExtResource( 5 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 16.9812
height = 13.6876

[node name="LiliacCangur" type="KinematicBody2D"]
pause_mode = 1
position = Vector2( 74.9095, 127.805 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 11
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "Fly"
anims/Fly = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_top = 0
limit_bottom = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -52.0
margin_right = 103.0
margin_bottom = 43.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 204.0
margin_top = 5.0
margin_right = 272.0
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
text = "Score:  0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer"]
pause_mode = 2
visible = false
margin_left = 198.497
margin_top = 96.7351
margin_right = 275.497
margin_bottom = 172.735
text = "AI MURIT! 
Apasa space sa joci iar"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1000, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 113.192, 125.421 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 1003.17, 495.687 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
